--- a/styles.css
+++ b/styles.css
@@ -238,16 +238,21 @@ header {
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     margin: 2rem 5rem;
-    text-align: center;
     flex-direction: column;
     transition: all 0.5s ease;
 }
 
-.book h2 {
+.book-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0.5rem;
+}
+
+.book h3 {
     overflow-wrap: break-word;
     position: relative;
-    margin: 1rem;
-    color: var(--red);
+    font-size: 1.3rem;
+    color: var(--yellow);
 }
 
 .book-title {
@@ -256,18 +261,18 @@ header {
 }
 
 .book i {
-    font-size: 1.4rem;
-    width: 3rem;
+    font-size: 1.5rem;
     cursor: pointer;
     margin: 0 auto;
     position: relative;
-    top: 0.5rem;
-    left: 11.2rem;
+    top: 0.7rem;
+    left: 11.1rem;
 }
 
 .isRead {
     font-size: 1.4rem;
     line-height: 3.5rem;
+    text-align: center;
     position: relative;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
@@ -379,7 +384,7 @@ header {
         backdrop-filter: blur(5px);
     }
 
-    .book-title h2 {
+    .book-title h3 {
         color: var(--dark1)
     }
 
@@ -429,7 +434,7 @@ header {
         margin: 4rem;
     }
 
-    .book-title h2 {
+    .book-title h3 {
         color: var(--dark1)
     }
 
