--- a/styles.css
+++ b/styles.css
@@ -245,7 +245,7 @@ header {
 .book-content-wrapper {
     display: flex;
     flex-direction: column;
-    padding-left: 0.5rem;
+    padding-left: 0.7rem;
 }
 
 .book h3 {
@@ -340,18 +340,24 @@ header {
     }
 
     .add-btn {
+        border: none;
+        outline: none;
         position: fixed;
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 6rem;
-        height: 6rem;
+        width: 5rem;
+        height: 5rem;
         right: 5%;
         bottom: 5%;
-        font-size: 2.5rem;
+        font-size: 2rem;
+        background: var(--dark1);
     }
 
     .add-btn:hover {
+        background: var(--light-green);
+        border-color: var(--light-blue);
+        color: var(--light-blue);
         transform: rotate(45deg);
     }
 
